<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".BrowseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DEDBFA"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/navbar"
            layout="@layout/navbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5B5687"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="8dp"
            android:paddingRight="4dp">

            <EditText
                android:id="@+id/serviceSearch"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTint="#F4F2FD"
                android:ems="10"
                android:hint="Browse Services"
                android:inputType="textPersonName" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="3.5">

                <ImageView
                    android:id="@+id/searchImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#BAB6CF"
                    app:srcCompat="@drawable/search" />

                <Button
                    android:id="@+id/searchButt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#716E7E"
                    android:backgroundTint="#00BAB6CF"
                    android:onClick="search" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5B5687"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="8dp"
            android:paddingRight="4dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/filtersButt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#BAB6CF"
                android:onClick="filters"
                android:text="Filters"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <Button
                android:id="@+id/suggestionsButt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="3.5"
                android:background="#BAB6CF"
                android:onClick="getSuggestions"
                android:text="Suggestions"
                android:textAllCaps="false" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/serviceResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingRight="8dp" />
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>