<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/borderlogin"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/userTitlelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        tools:text="Username" />

    <TextView
        android:id="@+id/userErrLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="#FF0000"
        android:textStyle="italic"
        tools:text="Please enter a username." />

    <TextView
        android:id="@+id/passtitleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        tools:text="password" />

    <TextView
        android:id="@+id/passErrLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="#FF0000"
        android:textStyle="italic"
        tools:text="Please enter a password." />

    <Button
        android:id="@+id/loginButt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CEF8FD"
        android:onClick="login"
        android:text="Log in"
        android:textAllCaps="false" />

</LinearLayout>