...
            android:layout_margin="4dp"
            android:text="If you already have an account you can log in here:"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/loginButtIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="#85ADFF"
            android:onClick="loginPopup"
...
            android:layout_margin="4dp"
            android:text="If you don't have an account you can create one here:"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/signupButtIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#85ADFF"
            android:onClick="signupPopup"
            android:text="Sign up"
...
