<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/borderlogin"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/UserTitleSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/usernameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/userErrSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="#FF0000"
        android:textStyle="italic"
        tools:text="Please enter a username." />

    <TextView
        android:id="@+id/passwordTitleSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/passwordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passErrSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="#FF0000"
        android:textStyle="italic"
        tools:text="Passwords must match." />

    <TextView
        android:id="@+id/passwordTitleSignup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm Password"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/passwordSignup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/menuSignupButt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CEF8FD"
        android:onClick="signup"
        android:text="Sign up"
        android:textAllCaps="false" />

</LinearLayout>